Add build-styles in package.json

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "build-styles": "npx sass src/sass/styles.scss public/styles/styles.css",
+    "build-styles:dev": "npx sass src/sass/styles.scss public/styles/styles.css --watch"
   },
   "keywords": [],
   "author": "",
